不再外置文本文件：只清图片/视频/二进制字节出会话
文本文件正文是模型的工作材料，跨回合把它换引用会让下回合 Edit 的
old_string 无法逐字符匹配、续用只能盲写、还得重读把省下的 token 花回去。
图片/二进制引用化是纯收益（模型读不懂原字节），文本留会话的累积占用
交给上下文压缩管——不在此处激进引用化。

最终规则（无任何阈值）：
- 文本文件 → 不外置，原文留会话
- 图片/视频/二进制文件 → 引用
- 非文件（Bash 输出等，路径不可反查）→ 不动

改动：
- SessionFileExternalizer.maybeExternalize 重写：文本放行、非文本才引用；
  删掉 THRESHOLD / materialize 兜底 / store 字段 / 构造参数 / 文本标行数分支
- MagicSniffer 新增共享 isTextFile(Path)，路径①②共用，消掉重复
- MediaExternalizingCallback 改调 MagicSniffer.isTextFile（行为不变，本就放行文本）
- AgentTools 构造 new SessionFileExternalizer(root)
- 测试重写：文本(大/小)保留、非文件保留、PNG 换图片引用、幂等
- spec/plan 顶部加方向性更正 #9

非空洞验证：注掉文本守卫 → 两个「文本保留」测试立即转红，恢复即绿。
全模块 379 测试通过、5 跳过（网络门）。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>